# AirKeyboard

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_linux.txt  README.md  build_libraries.sh  data_work.cpp  data_work.h  ideas.MD  main.cpp  model.h  model_utils.cpp  mouseControl  mouseControl.cpp  run_tests.sh  run_train.sh  setup_env.sh  test.cpp  test.ipynb  train.cpp  train.h  utils.cpp  utils.h
cunet/: cunet.h
data_prep/: organize_dataset.py  plots..ipynb  plots.ipynb  preprocess_data.py
data_prep/.ipynb_checkpoints/: organize_dataset-checkpoint.py  plots.-checkpoint.ipynb
logs/: hanco_3unet.csv  hanco_cnn.csv  py_train_error_39822487.txt  py_train_error_39822489.txt  py_train_error_39822693.txt  py_train_error_39823430.txt  py_train_error_39823432.txt  py_train_error_39827275.txt  py_train_error_39827679.txt  py_train_out_39822487.txt  py_train_out_39822488.txt  py_train_out_39822489.txt  py_train_out_39823432.txt  py_train_out_39827275.txt  py_train_out_39827679.txt  train_error_39734532.txt  train_error_39734536.txt  train_error_39739138.txt  train_error_39743641.txt  train_error_39747479.txt  train_error_39748049.txt  train_error_39748228.txt  train_error_39748230.txt  train_error_39758154.txt  train_error_39811413.txt  train_error_39811415.txt  train_error_39812099.txt  train_error_39812100.txt  train_error_39818286.txt  train_out_39739138.txt  train_out_39743641.txt  train_out_39748049.txt  train_out_39758152.txt  train_out_39758153.txt  train_out_39758154.txt  train_out_39758155.txt  train_out_39811332.txt  train_out_39811413.txt  train_out_39811415.txt  train_out_39812100.txt  (+1 more)
logs/.ipynb_checkpoints/: hanco_cnn_l6-checkpoint.csv  py_train_error_39820530-checkpoint.txt  py_train_error_39821364-checkpoint.txt  py_train_error_39822488-checkpoint.txt  py_train_error_39823431-checkpoint.txt  py_train_out_39821363-checkpoint.txt  py_train_out_39822471-checkpoint.txt  py_train_out_39822487-checkpoint.txt  py_train_out_39822488-checkpoint.txt  py_train_out_39822489-checkpoint.txt  py_train_out_39822693-checkpoint.txt  py_train_out_39823431-checkpoint.txt  py_train_out_39827679-checkpoint.txt  train_out_39812099-checkpoint.txt
mouseControl.dSYM/Contents/: Info.plist
mouseControl.dSYM/Contents/Resources/DWARF/: mouseControl
python_sample/notebooks/:  Analysis.ipynb  Train Notebook.ipynb  model_200  model_final  predict_video.ipynb  run_training.sh  train.py
python_sample/notebooks/.ipynb_checkpoints/:  Analysis-checkpoint.ipynb  Train Notebook-checkpoint.ipynb  predict_video-checkpoint.ipynb
python_sample/notebooks/training_configs/: hanco_mid.py
python_sample/notebooks/training_configs/.ipynb_checkpoints/: hanco_mid_cnn-checkpoint.py  hanco_mid_l6-checkpoint.py  small-checkpoint.py
python_sample/utils/: analysis.py  dataset.py  model.py  prep_utils.py
python_sample/utils/.ipynb_checkpoints/: trainer-checkpoint.py
scripts/: README.md  build_and_run.sh  evaluate.sh  evaluate_input.yaml  organize_data.bash  run_mouse_control.bash  run_tests.sh  run_train.sh  run_train.yaml
scripts/inputs/: evaluate_best.json  evaluate_default.json  evaluate_test.json  load_120k_images.json  load_600k_images.json  train_default.json  train_full.json  train_mid.json
src/: constants.h  data_work.cpp  data_work.h  evaluate.cpp  main.cpp  model.h  model_utils.cpp  model_utils.h  test.cpp  train.cpp  train.h  utils.cpp  utils.h
src/cunet/: cunet.h
test/: test  test_memleak.cpp
tmp_data/: xTrain.pt
